# tree-sitter-hledger

./: CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  example-file  go.mod  grammar.js  include_stub.journal  package-lock.json  package.json  playground.hledger  playground.journal  pyproject.toml  setup.py  simple_test.journal  test.journal  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hledger/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHledgerTests/: TreeSitterHledgerTests.swift
queries/: brackets.scm  highlights.scm  indents.scm  outline.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: account_name.txt  accounts.txt  amount.txt  amounts.txt  balance_assertion.txt  code.txt  comment.txt  comments.txt  complex.txt  cost.txt  date-secondary.txt  date.txt  date_secondary.txt  dates.txt  description.txt  directive_account.txt  directive_alias.txt  directive_auto_posting.txt  directive_commodity.txt  directive_decimal_mark.txt  directive_include.txt  directive_payee.txt  directive_periodic_transaction.txt  directive_price.txt  directive_tag.txt  directives.txt  payee_and_note.txt  posting.txt  posting_virtual.txt  prices.txt  status.txt  tag.txt  transaction.txt  transactions.txt
